refactor: fixes some test class sonar warnings
Removes more try-catches in test cases.